function/deployfunc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aksdeployment-http
spec:
  selector:
    app: aksdeployment-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksdeployment-http
  labels:
    app: aksdeployment-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aksdeployment-http
  template:
    metadata:
      labels:
        app: aksdeployment-http
    spec:
      containers:
      - name: aksdeployment-http
        image: priyankact428/myleaves2:latest
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        startupProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 240
          httpGet:
            path: /
            port: 80
            scheme: HTTP
      serviceAccountName: aksdeployment-function-keys-identity-svc-act
---
