function/funcprom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-service
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx    
spec:
  rules:  
    - http:
        paths:
        - pathType: Prefix
          backend:
                  service:
                          name: prometheus-server
                          port: 
                                number: 9090
          path: /
